--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
-* {
+*{
     border: none;
     margin: 0;
     padding:0;
+}
+
+#title {
+    color: white;
 }
 
 body {
@@ -10,7 +14,7 @@ body {
     background-blend-mode: overlay;
     background-repeat: no-repeat;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace, Arial, Helvetica, sans-serif;
     color: white;
     margin: 0;
     min-height: 100vh;
@@ -25,17 +29,124 @@ main {
 }
 
 header > h1 {
-    text-align: center;
-    padding: 20px 20px;
-    background-color: black;
+   text-align: center;
+   padding: 8px;
+   background-color: black;
 }
 
 article {
     width: 400px;
-    border: 4px solid black;
+    border: 4px solid white;
     border-radius: 8px;
     margin: 10px 12px;
     text-align: left;
     background-color: black;
+
 }
 
+article > h2 {
+    color: white;
+    padding: 4px 8px;
+
+}
+
+
+article li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+article:first-of-type {
+    border: 4px solid red;
+}
+
+#inprogress {
+    border: 4px solid yellow;
+}
+
+#inprogress h2 {
+    color: white;
+}
+
+#done {
+    border: 4px solid green;
+}
+
+#done h2 {
+    color: white;
+}
+
+article > ul{
+    list-style-type: none;
+}
+
+ul li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 6px 8px;
+    text-transform: uppercase;
+}
+.do li:nth-child(odd) {
+    background-color: rgba(182, 103, 103, 0.2);
+}
+
+.progress li:nth-child(odd) {
+    background-color: rgb(183, 183, 114);
+}
+
+.fin li:nth-child(odd) {
+    background-color: rgb(50, 109, 50);
+}
+
+
+input[type="checkbox"] {
+    display: none; 
+}
+
+input[type="checkbox"] + label.checkbox-label {
+    position: relative;
+    padding-left: 40px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+input[type="checkbox"] + label.checkbox-label::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: -10px;
+    width: 22px;
+    height: 22px;
+    border-radius: 2px;
+    background-color: white;
+    }
+
+input[type="checkbox"]:checked + label.checkbox-label::before {
+    content: '\1F44D';
+    border-radius: 2px;
+    background-color: black;
+    border: 2px solid black;
+    font-size: 16px;
+    text-align: center;
+    line-height: auto;
+    animation: fadein 0.7s;
+    position: absolute;
+    top: -10px;
+    left: 0;
+    height: 18px;
+    width: 18px;
+}
+
+
+footer#motivation {
+    text-align: center;
+    padding-top: 50px;
+    height: 80px;
+    background-color: black;
+    position: fixed; 
+    bottom: 0; 
+    width: 100%; 
+    z-index: 999; 
+}
